--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,6 +1,6 @@
 <div>
     <h1>Sign Up</h1>
-    <form id="login-form">
+    <form id="signup-form">
         <h4>Username:</h4>
         <input type="textarea" id="username-signup">
         <h4>Password:</h4>
@@ -8,3 +8,4 @@
         <button type="submit">Submit</button>
     </form>
 </div>
+<script src="/js/signup.js"></script>
