--- a/views/singlePost.handlebars
+++ b/views/singlePost.handlebars
@@ -1,10 +1,23 @@
 <div>
     <h2>{{post.title}}</h2>
     <h3>{{post.body}}</h3>
-{{#if post.Comments}}
-{{#each post.Comments}}
-{{body}}
-{{user.username}}
-{{/each}}
-{{/if}}
+    <p>Published by: {{post.User.username}}</p>
+    <p>Date Created: {{format_date post.createdAt}}</p>
+
+    <form id="comment-form">
+        <textarea id="comment-body" rows="4" cols="50" placeholder="Enter your comment"></textarea>
+        <button type="submit">Submit Comment</button>
+    </form>
+
+    {{#if post.Comments}}
+        <h4>Comments:</h4>
+        {{#each post.Comments}}
+            <div>
+                <p>{{body}}</p>
+                <p>Comment by: {{user.username}}</p>
+                <p>Date Created: {{format_date createdAt}}</p>
+            </div>
+        {{/each}}
+    {{/if}}
 </div>
+
