--- a/views/singlePost.handlebars
+++ b/views/singlePost.handlebars
@@ -14,10 +14,11 @@
         {{#each post.Comments}}
             <div>
                 <p>{{body}}</p>
-                <p>Comment by: {{user.username}}</p>
+                <p>Comment by: {{User.username}}</p>
                 <p>Date Created: {{format_date createdAt}}</p>
             </div>
         {{/each}}
     {{/if}}
 </div>
 
+<script src="/js/comment.js"></script>
