--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -17,7 +17,7 @@
             <h2>{{title}} &#9662;</h2>
         </a>
         <h3>{{body}}</h3>
-        <p>Created {{format_date createdAt}}</p> 
+        <p>Created At {{format_date createdAt}}</p>
     {{/each}}
 </div>
 
